--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
           <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/facebook.png" /></a>
         </div>
         <div class="social-item">
-          <a href="https://instagram.com/iam_kirubhakar?igshid=NGExMmI2YTkyZg=="><img src="https://img.icons8.com/bubbles/100/000000/instagram-new.png" /></a>
+          <a href="https://instagram.com/iam_kirubhakar?igshid=NGExMmI2YTkyZg==" target="_blank"><img src="https://img.icons8.com/bubbles/100/000000/instagram-new.png" /></a>
         </div>
         
         <div class="social-item">
