--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="services container">
       <div class="service-top">
         <h1 class="section-title">Educ<span>A</span>tion</h1>
-        <p>Completed my higher studies on NV Matriculation Hr Sec School with the grade of 93%,Pursuing my Batchlor degree on Sri Eshwar Collage Of Engineering </p>
+        <p>Completed my higher studies on NV Matriculation Hr Sec School with the grade of 93%,Pursuing my Batchlor degree on Sri Eshwar College Of Engineering </p>
       </div>
       <div class="service-bottom">
         <div class="service-item">
