--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <img src="https://hearst-images.s3.amazonaws.com/227/161/fotolia_3722687_XS.jpg" alt="img">
           </div>
         </div>
-        <div class="project-item">
+<!--         <div class="project-item">
           <div class="project-info">
             <h1>Project 4</h1>
             <h2>Coding is Love</h2>
@@ -147,7 +147,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
   </section>
   <!-- End Projects Section -->
 
